# gen_named_pipe

./: Dockerfile  README.md  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  gen_named_pipe_bug_report.md  gen_named_pipe_feature_request.md
.github/workflows/: gen_named_pipe_docker_checker.yml  gen_named_pipe_package.yml  gen_named_pipe_package_checker.yml  gen_named_pipe_py_checker.yml  gen_named_pipe_python2_publish.yml  gen_named_pipe_python3_build.yml  gen_named_pipe_python3_publish.yml  gen_named_pipe_python_checker.yml  gen_named_pipe_socket_triage_label.yml  gen_named_pipe_toc.yml  gen_named_pipe_triage.yml
docs/source/: conf.py  gen_named_pipe.pro.config.pro_name.rst  gen_named_pipe.pro.config.rst  gen_named_pipe.pro.read_template.rst  gen_named_pipe.rst  index.rst  modules.rst
gen_named_pipe/: __init__.py
gen_named_pipe/conf/: gen_named_pipe.cfg  gen_named_pipe.logo  project.yaml
gen_named_pipe/conf/template/posix/: np.template  np_close.template  np_make.template  np_open.template  np_read.template  np_write.template
gen_named_pipe/pro/: __init__.py  read_template.py  write_template.py
gen_named_pipe/pro/config/: __init__.py  pro_name.py  template_dir.py
gen_named_pipe/run/: gen_named_pipe_run.py
python-tool/conf/: gen_named_pipe.cfg
tests/: .coverage  gen_named_pipe  gen_named_pipe_coverage.json  gen_named_pipe_coverage.xml  gen_named_pipe_sub_test.py  gen_named_pipe_test.py  read_template_test.py  run_coverage.sh  write_template_test.py
tests/full_simple_new/: np.h  np_close.c  np_make.c  np_open.c  np_read.c  np_write.c
tests/latest_pro/: np.h  np_close.c  np_make.c  np_open.c  np_read.c  np_write.c
tests/simple_write/: np.h  np_close.c  np_make.c  np_open.c  np_read.c  np_write.c
